debezium/dbz#1938 Add Connect chronicle queue env variable
Signed-off-by: Chris Cranford <chris@hibernate.org>